--- a/MultiplyIt/Base.lproj/Main.storyboard
+++ b/MultiplyIt/Base.lproj/Main.storyboard
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AddIt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +23,75 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="gRu-vj-BY7">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Add--IT" translatesAutoresizingMaskIntoConstraints="NO" id="HQV-dn-hre">
+                                <rect key="frame" x="0.0" y="40" width="600" height="218"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="HQV-dn-hre" secondAttribute="height" multiplier="300:109" id="GvN-M3-ttR"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fdc-7Y-hwj">
+                                <rect key="frame" x="182" y="366" width="237" height="214"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="214" id="0Uy-2J-rdf"/>
+                                    <constraint firstAttribute="width" constant="237" id="l5w-0J-Q0i"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="add"/>
+                                <connections>
+                                    <action selector="addBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vat-Ue-fPq"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What number to add by?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a1B-DX-nIW">
+                                <rect key="frame" x="181" y="334" width="237" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 + 5 = 5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHs-UR-4Ek">
+                                <rect key="frame" x="200.5" y="215" width="199.5" height="89"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="89" id="D8f-UO-BsR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="50"/>
+                                <color key="textColor" red="0.83606684924534458" green="0.83570004514280893" blue="0.88569617146596857" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gRu-vj-BY7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="1gb-0I-kKb"/>
+                            <constraint firstItem="a1B-DX-nIW" firstAttribute="top" secondItem="gHs-UR-4Ek" secondAttribute="bottom" constant="30" id="3Bu-9A-D9N"/>
+                            <constraint firstItem="HQV-dn-hre" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="7Ki-h1-icX"/>
+                            <constraint firstItem="Fdc-7Y-hwj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="87l-NA-c5G"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Fdc-7Y-hwj" secondAttribute="bottom" constant="20" id="9sI-KI-iYV"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gRu-vj-BY7" secondAttribute="bottom" id="HXf-8O-S3D"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gRu-vj-BY7" secondAttribute="trailing" constant="-20" id="VaJ-HJ-zdn"/>
+                            <constraint firstItem="gHs-UR-4Ek" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cUE-77-idx"/>
+                            <constraint firstItem="HQV-dn-hre" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="40" id="dAl-kk-gSM"/>
+                            <constraint firstItem="a1B-DX-nIW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gps-hr-sem"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="HQV-dn-hre" secondAttribute="trailing" constant="-20" id="u9S-xd-ybn"/>
+                            <constraint firstItem="Fdc-7Y-hwj" firstAttribute="width" secondItem="a1B-DX-nIW" secondAttribute="width" id="wYp-wH-Lml"/>
+                            <constraint firstItem="Fdc-7Y-hwj" firstAttribute="top" secondItem="a1B-DX-nIW" secondAttribute="bottom" constant="2" id="wdU-Iz-ZR4"/>
+                            <constraint firstItem="gRu-vj-BY7" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="xMT-E1-gCM"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="AddIt" destination="HQV-dn-hre" id="DUI-e8-505"/>
+                        <outlet property="OutputLbl" destination="gHs-UR-4Ek" id="h6c-b3-vNv"/>
+                        <outlet property="addBtn" destination="Fdc-7Y-hwj" id="SBs-n7-aug"/>
+                        <outlet property="textField" destination="a1B-DX-nIW" id="45h-4I-otl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="245" y="305"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Add--IT" width="472" height="106"/>
+        <image name="add" width="241" height="232"/>
+        <image name="bg" width="1667" height="1667"/>
+    </resources>
 </document>
